@@ -1,7 +1,11 @@
+2012-07-14 Graeme Stewart <graeme.andrew.stewart@cern.ch>
+    * Update ValidateD3PD skeleton and LODPK to accept inputAODFile and inputESDFile 
+        (corrects problem with prodsys [a,b,c] notation).
+
 2012-07-11 Graeme Stewart <graeme.andrew.stewart@cern.ch>
     * Correct CMT requirements and remove dummy pickle file
     * Minor changes to mk-trf-pickle script
-    * Tagging as PATJobTransforms-00-04-27    
+    * Tagging as PATJobTransforms-00-04-27
 
 2012-07-06 Graeme Stewart <graeme.andrew.stewart@cern.ch>
     * Remove unnecessary padding code in rhadd.py; cosmetic improvements
